cmake_minimum_required(VERSION 3.3)
project(CS736_Project)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    libfiber-master/cpp/channel.hpp
    libfiber-master/cpp/lockfree_fifo.h
    libfiber-master/cpp/signal.hpp
    libfiber-master/cpp/test_channel.cpp
    libfiber-master/cpp/test_lockfree_fifo.cpp
    libfiber-master/example/echo_server.c
    libfiber-master/example/hello.c
    libfiber-master/include/dist_fifo.h
    libfiber-master/include/fiber.h
    libfiber-master/include/fiber_barrier.h
    libfiber-master/include/fiber_channel.h
    libfiber-master/include/fiber_cond.h
    libfiber-master/include/fiber_context.h
    libfiber-master/include/fiber_event.h
    libfiber-master/include/fiber_io.h
    libfiber-master/include/fiber_manager.h
    libfiber-master/include/fiber_multi_channel.h
    libfiber-master/include/fiber_mutex.h
    libfiber-master/include/fiber_rwlock.h
    libfiber-master/include/fiber_scheduler.h
    libfiber-master/include/fiber_semaphore.h
    libfiber-master/include/fiber_signal.h
    libfiber-master/include/fiber_spinlock.h
    libfiber-master/include/fifo_steal_buffer.h
    libfiber-master/include/hazard_pointer.h
    libfiber-master/include/lockfree_ring_buffer.h
    libfiber-master/include/machine_specific.h
    libfiber-master/include/mpmc_fifo.h
    libfiber-master/include/mpmc_lifo.h
    libfiber-master/include/mpmc_stack.h
    libfiber-master/include/mpsc_fifo.h
    libfiber-master/include/mpsc_relaxed_fifo.h
    libfiber-master/include/spsc_fifo.h
    libfiber-master/include/work_queue.h
    libfiber-master/include/work_stealing_deque.h
    libfiber-master/src/fiber.c
    libfiber-master/src/fiber_barrier.c
    libfiber-master/src/fiber_cond.c
    libfiber-master/src/fiber_context.c
    libfiber-master/src/fiber_event_ev.c
    libfiber-master/src/fiber_event_native.c
    libfiber-master/src/fiber_io.c
    libfiber-master/src/fiber_manager.c
    libfiber-master/src/fiber_mutex.c
    libfiber-master/src/fiber_rwlock.c
    libfiber-master/src/fiber_scheduler_dist.c
    libfiber-master/src/fiber_scheduler_wsd.c
    libfiber-master/src/fiber_semaphore.c
    libfiber-master/src/fiber_spinlock.c
    libfiber-master/src/hazard_pointer.c
    libfiber-master/src/work_queue.c
    libfiber-master/src/work_stealing_deque.c
    libfiber-master/submodules/libev/ev++.h
    libfiber-master/submodules/libev/ev.c
    libfiber-master/submodules/libev/ev.h
    libfiber-master/submodules/libev/ev_epoll.c
    libfiber-master/submodules/libev/ev_kqueue.c
    libfiber-master/submodules/libev/ev_poll.c
    libfiber-master/submodules/libev/ev_port.c
    libfiber-master/submodules/libev/ev_select.c
    libfiber-master/submodules/libev/ev_vars.h
    libfiber-master/submodules/libev/ev_win32.c
    libfiber-master/submodules/libev/ev_wrap.h
    libfiber-master/submodules/libev/event.c
    libfiber-master/submodules/libev/event.h
    libfiber-master/test/cpp_test_multithread_context.cpp
    libfiber-master/test/test_barrier.c
    libfiber-master/test/test_basic.c
    libfiber-master/test/test_bounded_mpmc_channel.c
    libfiber-master/test/test_bounded_mpmc_channel2.c
    libfiber-master/test/test_channel.c
    libfiber-master/test/test_channel_pingpong.c
    libfiber-master/test/test_cond.c
    libfiber-master/test/test_context.c
    libfiber-master/test/test_context_speed.c
    libfiber-master/test/test_cpu_scale.c
    libfiber-master/test/test_dist_fifo.c
    libfiber-master/test/test_fifo_steal_scale.c
    libfiber-master/test/test_hazard_pointers.c
    libfiber-master/test/test_helper.h
    libfiber-master/test/test_io.c
    libfiber-master/test/test_lockfree_ring_buffer.c
    libfiber-master/test/test_lockfree_ring_buffer2.c
    libfiber-master/test/test_mpmc_fifo.c
    libfiber-master/test/test_mpmc_lifo.c
    libfiber-master/test/test_mpmc_stack.c
    libfiber-master/test/test_mpsc.c
    libfiber-master/test/test_mpscr.c
    libfiber-master/test/test_multi_channel.c
    libfiber-master/test/test_multithread.c
    libfiber-master/test/test_mutex.c
    libfiber-master/test/test_pthread_cond.c
    libfiber-master/test/test_pthread_mutex.c
    libfiber-master/test/test_rwlock.c
    libfiber-master/test/test_semaphore.c
    libfiber-master/test/test_sharded_fifo_steal_scale.c
    libfiber-master/test/test_sleep.c
    libfiber-master/test/test_spinlock.c
    libfiber-master/test/test_split_stack.c
    libfiber-master/test/test_spsc.c
    libfiber-master/test/test_tryjoin.c
    libfiber-master/test/test_unbounded_channel.c
    libfiber-master/test/test_unbounded_channel_pingpong.c
    libfiber-master/test/test_wait_in_queue.c
    libfiber-master/test/test_work_queue.c
    libfiber-master/test/test_wsd.c
    libfiber-master/test/test_wsd_scale.c
    libfiber-master/test/test_yield_speed.c
    libfiber-master/test/thread-test-client.cpp
    libfiber-master/test/thread-test.cpp)

add_executable(CS736_Project ${SOURCE_FILES})