cmake_minimum_required(VERSION 3.3)
project(libfiber_master)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    cpp/channel.hpp
    cpp/lockfree_fifo.h
    cpp/signal.hpp
    cpp/test_channel.cpp
    cpp/test_lockfree_fifo.cpp
    example/echo_server.c
    include/dist_fifo.h
    include/fiber.h
    include/fiber_barrier.h
    include/fiber_channel.h
    include/fiber_cond.h
    include/fiber_context.h
    include/fiber_event.h
    include/fiber_io.h
    include/fiber_manager.h
    include/fiber_multi_channel.h
    include/fiber_mutex.h
    include/fiber_rwlock.h
    include/fiber_scheduler.h
    include/fiber_semaphore.h
    include/fiber_signal.h
    include/fiber_spinlock.h
    include/fifo_steal_buffer.h
    include/hazard_pointer.h
    include/lockfree_ring_buffer.h
    include/machine_specific.h
    include/mpmc_fifo.h
    include/mpmc_lifo.h
    include/mpmc_stack.h
    include/mpsc_fifo.h
    include/mpsc_relaxed_fifo.h
    include/spsc_fifo.h
    include/work_queue.h
    include/work_stealing_deque.h
    src/fiber.c
    src/fiber_barrier.c
    src/fiber_cond.c
    src/fiber_context.c
    src/fiber_event_ev.c
    src/fiber_event_native.c
    src/fiber_io.c
    src/fiber_manager.c
    src/fiber_mutex.c
    src/fiber_rwlock.c
    src/fiber_scheduler_dist.c
    src/fiber_scheduler_wsd.c
    src/fiber_semaphore.c
    src/fiber_spinlock.c
    src/hazard_pointer.c
    src/work_queue.c
    src/work_stealing_deque.c
    submodules/libev/ev++.h
    submodules/libev/ev.c
    submodules/libev/ev.h
    submodules/libev/ev_epoll.c
    submodules/libev/ev_kqueue.c
    submodules/libev/ev_poll.c
    submodules/libev/ev_port.c
    submodules/libev/ev_select.c
    submodules/libev/ev_vars.h
    submodules/libev/ev_win32.c
    submodules/libev/ev_wrap.h
    submodules/libev/event.c
    submodules/libev/event.h
    test/cpp_test_multithread_context.cpp
    test/test_barrier.c
    test/test_basic.c
    test/test_bounded_mpmc_channel.c
    test/test_bounded_mpmc_channel2.c
    test/test_channel.c
    test/test_channel_pingpong.c
    test/test_cond.c
    test/test_context.c
    test/test_context_speed.c
    test/test_cpu_scale.c
    test/test_dist_fifo.c
    test/test_fifo_steal_scale.c
    test/test_hazard_pointers.c
    test/test_helper.h
    test/test_io.c
    test/test_lockfree_ring_buffer.c
    test/test_lockfree_ring_buffer2.c
    test/test_mpmc_fifo.c
    test/test_mpmc_lifo.c
    test/test_mpmc_stack.c
    test/test_mpsc.c
    test/test_mpscr.c
    test/test_multi_channel.c
    test/test_multithread.c
    test/test_mutex.c
    test/test_pthread_cond.c
    test/test_pthread_mutex.c
    test/test_rwlock.c
    test/test_semaphore.c
    test/test_sharded_fifo_steal_scale.c
    test/test_sleep.c
    test/test_spinlock.c
    test/test_split_stack.c
    test/test_spsc.c
    test/test_tryjoin.c
    test/test_unbounded_channel.c
    test/test_unbounded_channel_pingpong.c
    test/test_wait_in_queue.c
    test/test_work_queue.c
    test/test_wsd.c
    test/test_wsd_scale.c
    test/test_yield_speed.c
    test/thread-test-client.cpp
    test/thread-test.cpp)

add_executable(libfiber_master ${SOURCE_FILES})